--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>la-card</title>
     <style>
+        :root{
+            --primary: #5a6cb2;
+            --cp: grey;
+        }
         *{
             padding: 0;
             margin: 0;
@@ -28,7 +32,7 @@
             --view-content-top:0px;
             --view-content-font:800 8rem auto; 
             --view-content-color: rgba(0, 0, 0, .1);
-            --view-background:#5a6cb2;
+            --view-background:var(--primary);
             --img-bottom:-24%;
             --img-position:relative;
             --title-font:2.3rem bold;
@@ -54,6 +58,7 @@
                 --description-width:70%;
                 --description-height:50%;
                 --description-margin:0 0 0 auto;
+                --description-color: 
             }
         }
     </style>
